--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
                 <div class="price-box1">
                     <div class="pbtexting">
                         <div class="bp">Basic plan</div>
-                        <div class="499">499/mo</div>
-                        <div class="5000">or 5000 yearly</div>
+                        <div class="b499">499/mo</div>
+                        <div class="b5000">or 5000 yearly</div>
                     </div>
                     <div class="lists">
                         <ul>
@@ -149,8 +149,8 @@
                 <div class="price-box1">
                     <div class="pbtexting">
                         <div class="bp">Basic plan</div>
-                        <div class="499">499/mo</div>
-                        <div class="5000">or 5000 yearly</div>
+                        <div class="b499">499/mo</div>
+                        <div class="b5000">or 5000 yearly</div>
                     </div>
                     <div class="lists">
                         <ul>
@@ -166,8 +166,8 @@
                 <div class="price-box1">
                     <div class="pbtexting">
                         <div class="bp">Basic plan</div>
-                        <div class="499">499/mo</div>
-                        <div class="5000">or 5000 yearly</div>
+                        <div class="b499">499/mo</div>
+                        <div class="b5000">or 5000 yearly</div>
                     </div>
                     <div class="lists">
                         <ul>
@@ -182,10 +182,70 @@
                 </div>
             </div>
         </div>
+        <div class="body-section-7">
+            <div class="b7content">
+                <h1 class="h7text">Get starteda 15-days free trial</h1>
+                <p class="p7paratext">Experience our Software's full range of features and benefits with our 15-day free trail.</p>
+                <div class="singupform">
+                    <form class="mailid">Enter your email</form>
+                    <div class="lastsignupbtn">Sign UP</div>
+                </div>
+                <div class="confirmtext">By clicking Sign up you're confirming that you agree with our <u>Terms and Conditions</u>  </div>
+            </div>
+        </div>
+        <div class="body-section-8">
+            <h1>We Can make your story true</h1>
+            <p>Strategies on low-hanging fruit to identify a ballpark value added activity matrix economically to beta test override the digital divide with DevOps.</p>
+        </div>
+        <div class="body-section-9">
+            <img src="img/Webflow svg.svg" alt="">
+            <img src="img/Airtable svg.svg" alt="">
+            <img src="img/Notion svg.png" alt="">
+            <img src="img/TikTok svg.png" alt="">
+            <img src="img/Slack - png.png" alt="">
+            <img src="img/Zoom svg.png" alt="">
+            <img src="img/Spotify svg.png" alt="">
+            <img src="img/Dell svg.png" alt="">
+            <img src="img/Samsung Electronics svg.svg" alt="">
+            <img src="img/Amazon svg.png" alt="">
+            <img src="img/Alibaba Cloud - png.png" alt="">
+        </div>
     </div>
 
     <!-- Footer section -->
-    <div class="footer-section"></div>
+    <div class="footer-section">
+        <div class="footer-1">
+            <div class="footer-left">
+                <div class="footer-left-logo">
+                    <img class="saas-logo"  src="img/saas 1.svg" alt="Digital Ledger Logo">
+                    <div class="header-logo-text">Digital Ledger</div>
+                </div>
+                <div class="footer-menu">
+                    <p class="footer-right-link">Home</p>
+                    <p class="footer-right-link">About us</p>
+                    <p class="footer-right-link">Pricing</p>
+                    <p class="footer-right-link">Contact us</p>
+                </div>
+            </div>
+            <div class="footer-right">
+                <p class="footer-right-subscribe">Subscribe</p>
+                <div class="singupform">
+                    <form class="mailid">Enter your email</form>
+                    <div class="lastsignupbtn">Sign UP</div>
+                </div>
+                <p class="footer-right-down">By Subscribing,you agree to our Privacy Policy</p>
+            </div>
+        </div>
+        <hr class="divider">
+        <div class="footer-2">
+            <div class="footer2-left">
+                <p>Privacy Policy</p>
+                <p>Terms of service</p>
+                <p>Cookie Settings</p>
+            </div>
+            <div>Copyright @ Digital Ledger.All right reserved</div>
+        </div>
+    </div>
 
 </body>
 </html>
