--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <img src="img/info5.png" alt="">
             </div>
             <div class="b4right">
-                <div class="brheading">Streamline Sales Performance</div>
+                <div class="brheading">Streamline Sales</div>
                 <div class="brheading">Performance</div>
                 <div class="b4para">Our elegantly designed day-to-pump chart provides a clear, concise overview of daily fuel sales, enabling you to monitor performance, identify trends, and optimize operations.</div>
                 <div class="readmorebutton">Read more</div>
